fix: update body overflow style
- Change `body` element `overflow-y` property from `scroll` to `auto` to enable vertical scrolling with a thin scrollbar

--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -25,7 +25,7 @@ html {
 }
 
 body {
-  overflow-y: scroll;
+  overflow-y: auto;
   scrollbar-width: thin;
   scrollbar-color: var(--color-secondary) var(--color-background);
 }
